# MetroGo

./: .editorconfig  .gitignore  README.md  app.py  core.py  dockerfile  pyproject.toml  requirements.txt  result.txt
.github/workflows/: ci.yml  test.yml
Core/: README.md  core.py  statictestsss.json  stations.json  stations_3.json  stations_4.json  stations_5.json  telegrambot.py  test.py
Core/cashe/: cashe_generator.py
Core/libs/: README.md  functions.py  lab-1.py  stations_2.json  stations_6.json
Core/scrapers/: README.md  line_1.py  line_2.py  line_3.py  line_4.py  line_5.py  line_6.py  line_7.py  run.py
Core/static/: README.md  stations.json  stations_1.json  stations_7.json
Core/static/excels/: line_1.xlsx  line_3.xlsx  line_4.xlsx  line_5.xlsx
assets/: stations.json
assets/excels/: hashtgerd.xlsx  line_2.xlsx  line_6.xlsx  line_7.xlsx  mehrabad.xlsx  parand.xlsx
assets/time_lines/: line_hashtgerd.json  line_mehrabad.json
libs/: DataManager.py  LineManager.py  Routing.py  ScheduleManager.py  TravelInfo.py  WordUtils.py
scrapers/: hashtgerd.py  line_1.py  line_2.py  line_3.py  line_4.py  line_5.py  line_6.py  line_7.py  mehrabad.py  parand.py  run.py
test/: test_core.py
