[project]
name = "Metrogo"
version = "0.1"
description = "Metro route planner, with information including train schedules"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "The other mmd", email = "info@metrogo.ir" }
]
license = { file = "LICENSE" }
keywords = ["subway", "metro", "routing"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: GNU License version 3",
    "Operating System :: OS Independent",
    "Topic :: Routing :: Metro"
]
dependencies = [
    "Levenshtein~=0.26.0",
    "python-Levenshtein~=0.26.0",
    "openpyxl~=3.1.0",
    "ruff~=0.9.0",
    "Dijkstar==2.6.0",
    "rapidfuzz~=3.12.0"
]

[project.urls]
Homepage = "https://github.com/theothermmd/metrogo"
Documentation = "https://github.com/theothermmd/metrogo/blob/main/README.md"
Issues = "https://github.com/theothermmd/metrogo/issues"


[tool.ruff]
line-length = 130
target-version = "py313"
fix = true

[tool.ruff.analyze]
detect-string-imports = true

[tool.ruff.lint]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true
line-ending = "lf"

